# cpp-tutorial

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml
beginner_tutorial/: CMakeLists.txt
beginner_tutorial/s10_challenge/: CMakeLists.txt
beginner_tutorial/s11_challenge/: CMakeLists.txt
beginner_tutorial/s12_challenge/: CMakeLists.txt
beginner_tutorial/s13_challenge/: CMakeLists.txt
beginner_tutorial/s14_challenge/: CMakeLists.txt
beginner_tutorial/s15_challenge/: CMakeLists.txt
beginner_tutorial/s19_challenge/s19_4_challenge/: CMakeLists.txt
beginner_tutorial/s19_challenge/s19_4_challenge/src/: main.cpp
cmake/: vcpkg.cmake
design_patterns/: CMakeLists.txt
design_patterns/behavioral/observer/: CMakeLists.txt
design_patterns/behavioral/observer/src/: main.cpp
design_patterns/builder/src/: main.cpp
design_patterns/creational/abstract-factory/: CMakeLists.txt
design_patterns/creational/abstract-factory/src/: main.cpp
design_patterns/creational/builder/: CMakeLists.txt
design_patterns/creational/builder/inc/: builder.h
design_patterns/creational/builder/src/: builder.cpp  main.cpp
design_patterns/creational/dependency-injection/: CMakeLists.txt
design_patterns/creational/dependency-injection/inc/: coffee-machine.h  icoffee-service.h
design_patterns/creational/dependency-injection/src/: coffee-machine.cpp  main.cpp  simple-coffee-service.cpp
design_patterns/creational/factory-method/: CMakeLists.txt
design_patterns/creational/factory-method/docs/: FactoryMethod.puml
design_patterns/creational/factory-method/src/: main.cpp
design_patterns/creational/prototype/: CMakeLists.txt
design_patterns/creational/prototype/src/: main.cpp
design_patterns/creational/singleton/: CMakeLists.txt
design_patterns/creational/singleton/src/: main.cpp
design_patterns/structural/adapter/: CMakeLists.txt
design_patterns/structural/adapter/inc/: FileBasedApi.h  InvalidInputException.h  JsonHelper.h  MovieApiAdapter.h  MovieApiAdapter2.h  MovieData.h  MovieDbRepository.h  MovieManager.h  MovieNotFoundException.h  StringHtmlEncoder.h  TheMovieDbApi.h  api_key.h
design_patterns/structural/adapter/src/: JsonHelper.cpp  MovieApiAdapter.cpp  MovieApiAdapter2.cpp  MovieDbRepository.cpp  MovieManager.cpp  TheMovieDbApi.cpp  main.cpp
s10_challenge/: CMakeLists.txt
s11_challenge/: CMakeLists.txt
s14_challenge/: CMakeLists.txt
s16_challenge/: CMakeLists.txt
s18_challenge/: CMakeLists.txt
s19_1_challenge/: CMakeLists.txt
s19_2_challenge/: CMakeLists.txt
s19_challenge/: CMakeLists.txt
s20_2_challenge/: CMakeLists.txt
s4_challenge/: CMakeLists.txt  main.cpp
s7_challenge/: CMakeLists.txt
s9_challenge/: CMakeLists.txt
(+82 files in other folders)
