cmake_minimum_required(VERSION 3.16)
project(cpp_tutorial)

add_subdirectory(s4_challenge)
add_subdirectory(s6_challenge)
add_subdirectory(s7_challenge)
add_subdirectory(s8_challenge)
add_subdirectory(s9_challenge)
add_subdirectory(s10_challenge)
add_subdirectory(s11_challenge)
add_subdirectory(s12_challenge)
add_subdirectory(s13_challenge)
add_subdirectory(s14_challenge)
add_subdirectory(s15_challenge)
add_subdirectory(s16_challenge)
add_subdirectory(s17_challenge)
add_subdirectory(s18_challenge)
add_subdirectory(s19_1_challenge)
add_subdirectory(s19_2_challenge)
add_subdirectory(s19_3_challenge)
