cmake_minimum_required(VERSION 3.16)
project(cpp_design_patterns)

add_subdirectory(creational/singleton)
add_subdirectory(creational/builder)
add_subdirectory(creational/prototype)
add_subdirectory(creational/factory-method)
add_subdirectory(creational/abstract-factory)
add_subdirectory(creational/dependency-injection)
add_subdirectory(structural/adapter)
